--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,16 @@
-name: 'Build'
+name: 'Build Custom'
 on:
   - workflow_dispatch
 jobs:
-  test:
+  build:
+    if: github.repository_owner == 'manna-harbour'
     uses: ./.github/workflows/main.yml
     with:
       mode: '["build"]'
+      alphas: '["qwerty"]'
+      nav: '["vi"]'
+      clipboard: '["mac"]'
+      layers: '["default"]'
+      mapping: '["default", "kinesis_advantage"]'
+      kmonad_os: '["mac"]'
+
